--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@angular/platform-server": "~19.0.0",
     "@angular/router": "~19.0.0",
     "@angular/ssr": "~19.0.0",
-    "express": "~4.18.2",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -27,29 +31,35 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.3.0",
+    "@nx/angular": "^20.1.4",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
     "@nx/jest": "20.3.0",
     "@nx/js": "20.3.0",
     "@nx/web": "20.3.0",
     "@nx/workspace": "20.3.0",
+    "@nxrocks/nx-spring-boot": "^10.2.6",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "22.2.0",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
+    "autoprefixer": "^10.4.0",
+    "daisyui": "^4.12.23",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.3.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
